[package]
name = "xcb-dl"
version = "0.1.1"
edition = "2021"
license = "X11"
description = "Rust bindings for libxcb"
keywords = ["xcb", "window", "xlib", "x11"]
repository = "https://github.com/mahkoh/xcb-dl"
exclude = [
    "xcbproto",
    "generate.py",
    "generate-all",
    ".*",
]

[dependencies]
libloading = "0.7.1"
libc = "0.2.105"

[package.metadata."docs.rs"]
all-features = true

[features]
has_symbol = []

xcb_composite = ["xcb_composite_types"]
xcb_damage = ["xcb_damage_types"]
xcb_dpms = ["xcb_dpms_types"]
xcb_dri2 = ["xcb_dri2_types"]
xcb_dri3 = ["xcb_dri3_types"]
xcb_ge = ["xcb_ge_types"]
xcb_glx = ["xcb_glx_types"]
xcb_present = ["xcb_present_types"]
xcb_randr = ["xcb_randr_types"]
xcb_record = ["xcb_record_types"]
xcb_render = ["xcb_render_types"]
xcb_res = ["xcb_res_types"]
xcb_screensaver = ["xcb_screensaver_types"]
xcb_shape = ["xcb_shape_types"]
xcb_shm = ["xcb_shm_types"]
xcb_sync = ["xcb_sync_types"]
xcb_xevie = ["xcb_xevie_types"]
xcb_xf86dri = ["xcb_xf86dri_types"]
xcb_xfixes = ["xcb_xfixes_types"]
xcb_xinerama = ["xcb_xinerama_types"]
xcb_xinput = ["xcb_xinput_types"]
xcb_xkb = ["xcb_xkb_types"]
xcb_xprint = ["xcb_xprint_types"]
xcb_xselinux = ["xcb_xselinux_types"]
xcb_xtest = ["xcb_xtest_types"]
xcb_xv = ["xcb_xv_types"]
xcb_xvmc = ["xcb_xvmc_types"]

# Only make the types available but not the symbols
xcb_composite_types = ["xcb_xfixes_types"]
xcb_damage_types = ["xcb_xfixes_types"]
xcb_dpms_types = []
xcb_dri2_types = []
xcb_dri3_types = []
xcb_ge_types = []
xcb_glx_types = []
xcb_present_types = ["xcb_xfixes_types", "xcb_randr_types", "xcb_sync_types"]
xcb_randr_types = ["xcb_render_types"]
xcb_record_types = []
xcb_render_types = []
xcb_res_types = []
xcb_screensaver_types = []
xcb_shape_types = []
xcb_shm_types = []
xcb_sync_types = []
xcb_xevie_types = []
xcb_xf86dri_types = []
xcb_xfixes_types = ["xcb_shape_types", "xcb_render_types"]
xcb_xinerama_types = []
xcb_xinput_types = ["xcb_xfixes_types"]
xcb_xkb_types = []
xcb_xprint_types = []
xcb_xselinux_types = []
xcb_xtest_types = []
xcb_xv_types = ["xcb_shm_types"]
xcb_xvmc_types = ["xcb_xv_types"]
